Fix presets overflow in split column mode

--- a/src/nginxconfig/scss/_panel.scss
+++ b/src/nginxconfig/scss/_panel.scss
@@ -35,6 +35,7 @@ THE SOFTWARE.
     .buttons-group {
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       justify-content: space-between;
     }
 
@@ -57,6 +58,10 @@ THE SOFTWARE.
 
     .buttons-group {
       align-items: center;
+
+      .button {
+        margin: 0 .25rem .5rem;
+      }
     }
   }
 
